# libjson-rpc

./: Makefile.am  README.md  autogen.sh  build.sh  cleanup.sh  configure.ac
src/: Makefile.am  jsonrp.cpp  rpc_base.hpp  rpc_client.cpp  rpc_client.hpp  rpc_server.cpp  rpc_server.hpp  rpc_server_base.hpp  serialization.hpp  std.hpp  utils.cpp  utils.h  utils.hpp
test/: Makefile.am  Makefile.in  main.cpp
